# cmus-tray-widget

./: CMakeLists.txt  README.md  cmusWidgets.pro  cmustrayicon.cpp  cmustrayicon.h  icons.qrc  main.cpp
